[gd_scene load_steps=41 format=3 uid="uid://ist863a7maj1"]

[ext_resource type="Script" path="res://scripts/anjo_patrulha.gd" id="1_cqnda"]
[ext_resource type="Texture2D" uid="uid://djufjkix2kru8" path="res://assets/BadChickenAssetPack/Chickens/BlueChicken-Sheet.png" id="2_g4j4m"]
[ext_resource type="Texture2D" uid="uid://gtw1dvml3fia" path="res://assets/Rocky Roads/FX/exclamation.png" id="4_1w0xr"]
[ext_resource type="Texture2D" uid="uid://b5y8ushvpnaq7" path="res://assets/Small slash FX/small_slash_hit_1.png" id="5_w136h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_khn5l"]
atlas = ExtResource("2_g4j4m")
region = Rect2(0, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21q18"]
atlas = ExtResource("2_g4j4m")
region = Rect2(16, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h763"]
atlas = ExtResource("2_g4j4m")
region = Rect2(32, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5u1c"]
atlas = ExtResource("2_g4j4m")
region = Rect2(48, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptvao"]
atlas = ExtResource("2_g4j4m")
region = Rect2(64, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nsip"]
atlas = ExtResource("2_g4j4m")
region = Rect2(80, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7uy"]
atlas = ExtResource("2_g4j4m")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktf5i"]
atlas = ExtResource("2_g4j4m")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrl81"]
atlas = ExtResource("2_g4j4m")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kkpp"]
atlas = ExtResource("2_g4j4m")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sfnd"]
atlas = ExtResource("2_g4j4m")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5e7b"]
atlas = ExtResource("2_g4j4m")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqccq"]
atlas = ExtResource("2_g4j4m")
region = Rect2(32, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jafw"]
atlas = ExtResource("2_g4j4m")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpyd2"]
atlas = ExtResource("2_g4j4m")
region = Rect2(32, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_t4am2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_khn5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21q18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h763")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5u1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptvao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nsip")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7uy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktf5i")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrl81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kkpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sfnd")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5e7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqccq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jafw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpyd2")
}],
"loop": true,
"name": &"take_damage",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_10gx3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vx2ce"]
size = Vector2(384, 42.25)

[sub_resource type="CircleShape2D" id="CircleShape2D_k5lf5"]
radius = 19.105

[sub_resource type="AtlasTexture" id="AtlasTexture_dwuvi"]
atlas = ExtResource("2_g4j4m")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu6pb"]
atlas = ExtResource("2_g4j4m")
region = Rect2(32, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbkic"]
atlas = ExtResource("2_g4j4m")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uh4v"]
atlas = ExtResource("2_g4j4m")
region = Rect2(32, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1r84m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwuvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu6pb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbkic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uh4v")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_v8f7c"]
atlas = ExtResource("4_1w0xr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvlo3"]
atlas = ExtResource("4_1w0xr")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4m7o"]
atlas = ExtResource("4_1w0xr")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdr0e"]
atlas = ExtResource("4_1w0xr")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h75wu"]
atlas = ExtResource("4_1w0xr")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw8u5"]
atlas = ExtResource("4_1w0xr")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6emxj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8f7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvlo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4m7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdr0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h75wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw8u5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_a2lce"]
atlas = ExtResource("5_w136h")
region = Rect2(0, 0, 43, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mvi2"]
atlas = ExtResource("5_w136h")
region = Rect2(43, 0, 43, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybbhd"]
atlas = ExtResource("5_w136h")
region = Rect2(86, 0, 43, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3i86"]
atlas = ExtResource("5_w136h")
region = Rect2(129, 0, 43, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_302sh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2lce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mvi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybbhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3i86")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="anjo_patrulha" type="CharacterBody2D"]
position = Vector2(0, -24)
script = ExtResource("1_cqnda")

[node name="sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.94804, 1.51132)
sprite_frames = SubResource("SpriteFrames_t4am2")
animation = &"side_walk"
autoplay = "side_walk"

[node name="colision" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_10gx3")
debug_color = Color(0, 0, 0, 0.419608)

[node name="DetectionArea" type="Area2D" parent="."]

[node name="detection_shape" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, 21.125)
shape = SubResource("RectangleShape2D_vx2ce")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1, 9)
shape = SubResource("CircleShape2D_k5lf5")
debug_color = Color(0.835294, 0.321569, 0.564706, 0.419608)

[node name="Timer" type="Timer" parent="."]

[node name="fireball_spawn_point" type="Marker2D" parent="."]
position = Vector2(24, 24)

[node name="ground_detector" type="RayCast2D" parent="."]
position = Vector2(0, 24)
target_position = Vector2(0, 8)

[node name="player_detector_right" type="RayCast2D" parent="."]
position = Vector2(0, 8)
target_position = Vector2(150, 0)

[node name="player_detector_left" type="RayCast2D" parent="."]
position = Vector2(0, 8)
target_position = Vector2(-150, 0)

[node name="cooldown_fireball" type="Timer" parent="."]
wait_time = 0.8

[node name="hurt" type="AnimatedSprite2D" parent="."]
visible = false
self_modulate = Color(1, 0.367788, 0.300217, 1)
position = Vector2(0, -1.19209e-07)
scale = Vector2(1.875, 1.4375)
sprite_frames = SubResource("SpriteFrames_1r84m")
autoplay = "default"
frame_progress = 0.37002

[node name="exclamation" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-16, -8)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_6emxj")
frame_progress = 0.690959

[node name="hit" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, 16)
scale = Vector2(0.5, 0.416667)
sprite_frames = SubResource("SpriteFrames_302sh")
autoplay = "default"
frame_progress = 0.663003

[node name="death_point" type="Marker2D" parent="."]
position = Vector2(1, 11)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="cooldown_fireball" to="." method="_on_cooldown_fireball_timeout"]
